--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -8,11 +8,11 @@ jobs:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.2.0
-      with:
-        fetch-depth: 2
+    - name: Get latest code
+    - uses: actions/checkout@v4
+    
     - name: FTP-Deploy-Action
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      uses: SamKirkland/FTP-Deploy-Action@4.3.5
       with:
         server: ${{ secrets.FTP_SERVER }} 
         username: ${{ secrets.FTP_USERNAME }} 
